--- a/MyDiary.UI/App.xaml
+++ b/MyDiary.UI/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="clr-namespace:MyDiary.UI.Converters"
-             xmlns:local="clr-namespace:MyDiary.UI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:MyDiary.UI">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
