--- a/MyDiary.UI/Views/LoginView.xaml
+++ b/MyDiary.UI/Views/LoginView.xaml
@@ -32,10 +32,13 @@
                         <TextBox x:Name="PasswordTextBox" Height="40" Visibility="Collapsed" TextChanged="PasswordTextBox_TextChanged" />
                     </Grid>
                     <Button Grid.Column="1" Content="👁" Style="{StaticResource GhostButton}" MinWidth="44" MinHeight="40" Padding="0" Click="TogglePasswordButton_Click" />
+
                 </Grid>
-
-                <CheckBox x:Name="RememberMeCheckBox" Content="Запомнить меня" Margin="0,0,0,18" />
-
+                <Grid x:Name="ElementGrid" Margin="0,0,0,9">
+                    <CheckBox x:Name="RememberMeCheckBox" Content="Запомнить меня" Margin="0,0,0,0" Canvas.ZIndex="1"/>
+                    <TextBlock x:Name="ErrorText" Text="" Foreground="{DynamicResource Brush.TextMuted}" Margin="0,0,0,0" Canvas.ZIndex="0"/>
+                </Grid>
+                
                 <Button Content="Войти" Style="{StaticResource PrimaryButton}" Click="LoginButton_Click" />
                 <Button Content="Регистрация" Style="{StaticResource GhostButton}" Margin="0,10,0,0" Click="GoToRegisterButton_Click" />
             </StackPanel>
